minor additions to the installation guide and the realm